--- a/hrt-narrative.Rmd
+++ b/hrt-narrative.Rmd
@@ -760,9 +760,9 @@ group_chart_hc(
 
 ## 3. Background
 
-### 3.1. Female sex hormones and their modulators  {.toc-ignore}
+HRT, which replaces the hormones that are at low levels, is the main medicine treatment for menopause and perimenopause symptoms.
 
-### 3.2. Preparations for vaginal and vulval changes  {.toc-ignore}
+
 
 ## 4. About these statistics
 
